[package]
name = "cbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "1.0"
num-traits = "0.2"
seq_io = "0.4.0-alpha.0"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = [
    "fancy",
] } # optional but gives nicer error messages!


[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
rand = "0.8"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = true
