[package]
name = "cbl"
version = "0.1.0"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
edition = "2021"

[dependencies]
autocxx = "0.26"
cxx = "1.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
autocxx-build = "0.26"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
needletail = "0.5"
rand = "0.8"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = true
