[package]
name = "cbl"
version = "0.1.0"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
edition = "2021"

[dependencies]
autocxx = "0.26"
bincode = "1.3"
cxx = "1.0"
iter-set-ops = "0.2"
itertools = "0.13"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
autocxx-build = "0.26"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"
needletail = "0.5"
rand = "0.8"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = true
